--- a/tsaproj.css
+++ b/tsaproj.css
@@ -3,8 +3,8 @@ body {
 }
 
 #toggleButtons {
-  margin-left : 30%;
-  margin-right: 20%;
+  width: 20%;
+  margin: auto;
 }
 
 fieldset {
@@ -37,4 +37,12 @@ select {
   right: 10px;
   padding: 5px;
   margin: 10px;
+}
+
+ul li {
+  list-style-type: none;
+}
+
+.title {
+  font-weight: bold;
 }
